c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/malformed_type_name.c
int main(void) {
    int a = 4;
    int *foo = &a;
    // invalid cast syntax; missing type specifier
    int *bar[3] = (*[3]) foo;
    return 0;
}